# mcp-experts

./: .env.example  .gitignore  README.md  dockerfile  index.ts  install.sh  knowledge-graph.ts  knowledge_graph.py  ollama_service.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.py  setup.py  setup.sh  tsconfig.json  vibeLog.md
.github/workflows/: bandit.yml  semgrep.yml  trivy.yml
examples/: client_usage.py  demo.py  javascript_example.js  python_example.py  wtf_horrible.py  wtf_stahp.js
examples/javascript/: shopping_cart.js  user_management.js
examples/python/: user_management.py
examples/typescript/: task_manager.ts  user_management.ts
experts/: __init__.py
experts/martin_fowler/: __init__.py  config.ts  expert.py  index.ts
experts/robert_c_martin/: __init__.py  config.ts  expert.py  index.ts
services/: ollama.ts
